# TODO-Application

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  TASK.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  docker-smoke.yml
docs/: ROADMAP.md
docs/architecture/: data-and-events.md  local-development.md  overview.md  services.md
docs/contracts/events/: README.md  event-catalog.md  rules.md  topics.md
docs/runbooks/: bootstrap.md
docs/tasks/: 000-index.md  TEMPLATE.md
frontend/: index.html
infra/nginx/: nginx.conf
services/api-gateway/: Dockerfile  main.py
services/api-gateway/app/: db.py  main.py  models.py
services/mailer-service/: main.py
services/scheduler-service/: Dockerfile
services/shared/: logging.py
services/shared/schemas/events/: email.daily_digest.requested.schema.json  task.completed.schema.json  task.created.schema.json
tests/: test_logging_smoke.py
