[project]
name = "event-driven-todo"
version = "0.1.0"
description = "Event-driven TODO app (FastAPI + Kafka) with scheduler and mailer services"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Andrey" }]
# Корневой проект — "meta": он не обязан быть импортируемым пакетом.
# Dependencies здесь можно оставить пустыми, а зависимости держать в optional groups.
dependencies = []

[project.optional-dependencies]
# Общие dev инструменты для всех сервисов
dev = [
  "ruff>=0.6.0",
  "mypy>=1.10.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.27.0",           # удобно для API тестов (async client)
  "types-python-dateutil",   # пример типов, если понадобится
]

# --- API service dependencies (FastAPI + DB + JWT + Kafka producer + outbox)
api = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.0",
  "sqlalchemy[asyncio]>=2.0.30",
  "asyncpg>=0.29.0",
  "alembic>=1.13.1",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  # Kafka: выбери ОДИН клиент и придерживайся его везде
  "confluent-kafka>=2.5.0",
]

# --- Scheduler service dependencies (APScheduler + DB read + Kafka producer)
scheduler = [
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.0",
  "apscheduler>=3.10.4",
  "sqlalchemy[asyncio]>=2.0.30",
  "asyncpg>=0.29.0",
  "confluent-kafka>=2.5.0",
]

# --- Mailer service dependencies (Kafka consumer + SMTP + templates)
mailer = [
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.0",
  "jinja2>=3.1.4",
  "aiosmtplib>=3.0.1",
  "confluent-kafka>=2.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
# Для монорепо удобно явно сказать, где код
src = ["services"]
exclude = [
  ".venv",
  "venv",
  "__pycache__",
  ".pytest_cache",
  ".mypy_cache",
  ".ruff_cache",
]

[tool.ruff.lint]
# Хороший “взрослый минимум” без истерики
select = [
  "E", "F", "W",      # pycodestyle/pyflakes
  "I",                # isort
  "B",                # bugbear
  "UP",               # pyupgrade
  "SIM",              # simplify
  "C4",               # comprehensions
]
ignore = [
  "E501",             # длину строк отдаём line-length + форматтеру
]

[tool.ruff.lint.per-file-ignores]
# Тесты обычно более “болтливые”
"**/tests/**" = ["B008", "SIM117"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
pretty = true
show_error_codes = true

# Монорепо: указываем, где искать код
mypy_path = "services"
files = ["services"]

# Асинхронный стек и сторонние либы часто без типов — лучше отключить шум
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["services"]
addopts = "-q"
asyncio_mode = "auto"
filterwarnings = [
  "error",
  "ignore::DeprecationWarning",
]

