[project]
name = "event-driven-todo"
version = "0.1.0"
description = "Event-driven TODO app (FastAPI + Kafka) with scheduler and mailer services"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Andrew A." }]
# Корневой проект — "meta": он не обязан быть импортируемым пакетом.
# Dependencies здесь можно оставить пустыми, а зависимости держать в optional groups.
dependencies = []

[project.optional-dependencies]
# Общие dev инструменты для всех сервисов
dev = [
  "ruff==0.14.14",
  "mypy==1.19.1",
  "pytest==9.0.2",
  "pytest-asyncio==1.3.0",
  "httpx==0.28.1",
  "types-python-dateutil==2.9.0.20251115",
]

# --- API service dependencies (FastAPI + DB + JWT + Kafka producer + outbox)
api = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.0",
  "sqlalchemy[asyncio]>=2.0.30",
  "asyncpg>=0.29.0",
  "alembic>=1.13.1",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "confluent-kafka>=2.5.0",
]

# --- Scheduler service dependencies (APScheduler + DB read + Kafka producer)
scheduler = [
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.0",
  "apscheduler>=3.10.4",
  "sqlalchemy[asyncio]>=2.0.30",
  "asyncpg>=0.29.0",
  "confluent-kafka>=2.5.0",
]

# --- Mailer service dependencies (Kafka consumer + SMTP + templates)
mailer = [
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.0",
  "jinja2>=3.1.4",
  "aiosmtplib>=3.0.1",
  "confluent-kafka>=2.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["services"]
exclude = [
  ".venv",
  "venv",
  "__pycache__",
  ".pytest_cache",
  ".mypy_cache",
  ".ruff_cache",
]

[tool.ruff.lint]
select = [
  "E", "F", "W",      # pycodestyle/pyflakes
  "I",                # isort
  "B",                # bugbear
  "UP",               # pyupgrade
  "SIM",              # simplify
  "C4",               # comprehensions
]
ignore = [
  "E501",
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["B008", "SIM117"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
pretty = true
show_error_codes = true

mypy_path = "services"
files = ["services"]

ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
filterwarnings = [
  "error",
  "ignore::DeprecationWarning",
]

